set(TARGET sd)

if(SD_EXAMPLES_GLOVE_GUI)
add_executable(${TARGET} main.cpp main_glove.h ${CMAKE_SOURCE_DIR}/thirdparty/glove.h)
target_compile_definitions(${TARGET} PUBLIC -D SD_EXAMPLES_GLOVE_GUI)
if(SD_EXAMPLES_GLOVE_GUI_DESKTOP)
target_compile_definitions(${TARGET} PUBLIC -D SD_EXAMPLES_GLOVE_GUI_DESKTOP)
endif()
target_link_libraries(${TARGET} PRIVATE stable-diffusion ${CMAKE_THREAD_LIBS_INIT} Qt${QT_VERSION}::Widgets)
if(MSVC)
target_compile_options(${TARGET} PUBLIC /bigobj)
endif()
else()
add_executable(${TARGET} main.cpp)
target_link_libraries(${TARGET} PRIVATE stable-diffusion ${CMAKE_THREAD_LIBS_INIT})
endif()
target_compile_features(${TARGET} PUBLIC cxx_std_11)

install(TARGETS ${TARGET} RUNTIME)